; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_driver.c_menu_display_font_file.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_driver.c_menu_display_font_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i8**, i32, i8*, float, i32)* }

@menu_disp = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @menu_display_font_file(i8* %0, float %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca float, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store float %1, float* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* null, i32** %8, align 8
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @menu_disp, align 8
  %10 = icmp ne %struct.TYPE_2__* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %26

12:                                               ; preds = %3
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @menu_disp, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32 (i8**, i32, i8*, float, i32)*, i32 (i8**, i32, i8*, float, i32)** %14, align 8
  %16 = bitcast i32** %8 to i8**
  %17 = call i32 @video_driver_get_ptr(i32 0)
  %18 = load i8*, i8** %5, align 8
  %19 = load float, float* %6, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 %15(i8** %16, i32 %17, i8* %18, float %19, i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %12
  store i32* null, i32** %4, align 8
  br label %26

24:                                               ; preds = %12
  %25 = load i32*, i32** %8, align 8
  store i32* %25, i32** %4, align 8
  br label %26

26:                                               ; preds = %24, %23, %11
  %27 = load i32*, i32** %4, align 8
  ret i32* %27
}

declare dso_local i32 @video_driver_get_ptr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
